--- a/DSA_Proj_Son.ipynb
+++ b/DSA_Proj_Son.ipynb
@@ -23,29 +23,20 @@
           "height": 1000
         },
         "id": "p_QUXrED3tGr",
-        "outputId": "9545f01c-34f5-4268-bd9a-27b50068eda6"
+        "outputId": "09ff1e7f-1e2d-4783-eed5-42f61b2fbcd2"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-3-9681fa9ab2d6>:22: UserWarning: Parsing dates in %d.%m.%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-            "  df['Date'] = pd.to_datetime(df['Date'], errors='coerce')\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Missing Values:\n",
-            " Date                        0\n",
+            "Date                        0\n",
             "Coffee Type                62\n",
             "Coffee Number               0\n",
             "Caffeine Amount (mg)        5\n",
             "Course Load (min)           0\n",
             "Exam Number (that week)     0\n",
-            "dtype: int64\n",
             "\n",
             "[EDA] Daily Coffee Consumption Over Time\n"
           ]
@@ -188,12 +179,14 @@
         "\n",
         "# Step 2: Data Cleaning\n",
         "# ---------------------\n",
-        "df['Date'] = pd.to_datetime(df['Date'], errors='coerce')\n",
+        "df['Date'] = pd.to_datetime(df['Date'], errors='coerce', dayfirst=True)\n",
         "numeric_columns = ['Coffee Number', 'Caffeine Amount (mg)', 'Course Load (min)', 'Exam Number (that week)']\n",
         "for col in numeric_columns:\n",
         "    df[col] = pd.to_numeric(df[col], errors='coerce')\n",
         "\n",
-        "print(\"Missing Values:\\n\", df.isnull().sum())\n",
+        "print(\"Missing Values:\")\n",
+        "print(df.isnull().sum().to_string())\n",
+        "\n",
         "\n",
         "# Step 3: Exploratory Data Analysis (EDA)\n",
         "# ---------------------------------------\n",
